--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mergaite</title>
 </head>
+
 <body>
-    
+    <header>
+        <img src="#" alt="Logo"
+        <nav> 
+          <a href="#">Home</a>
+          <a href="#">Tranks</a>
+          <a href="#">Librarys</a>
+          <a href="#">Community</a>
+          <a href="#">Sign in</a>  
+        </nav>
+    </header>
+    <main>
+        <div>
+            <h1>404</h1>
+            <P>The link is broken or the page has been moved</P>
+        </div>
+        <img src="#" alt="Liudnas veidelis ir mergina">
+    </main>
 </body>
 </html>
