--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mergaite</title>
+
+<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -12,7 +14,7 @@
         <img src="#" alt="Logo"
         <nav> 
           <a href="#">Home</a>
-          <a href="#">Tranks</a>
+          <a href="#">Tracks</a>
           <a href="#">Librarys</a>
           <a href="#">Community</a>
           <a href="#">Sign in</a>  
