logo ir main picture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="#" alt="Logo"
+        <img src="./mergaite.png" alt="Logo"
         <nav> 
           <a href="#">Home</a>
           <a href="#">Tracks</a>
@@ -25,7 +25,7 @@
             <h1>404</h1>
             <P>The link is broken or the page has been moved</P>
         </div>
-        <img src="#" alt="Liudnas veidelis ir mergina">
+        <img src="./mergaitebigger.png" alt="Liudnas veidelis ir mergina">
     </main>
 </body>
 </html>
