--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <header>
-        <img src="./mergaite.png" alt="Logo"
+        <img src="./mergaite.png" alt="Logo">
         <nav> 
           <a href="#">Home</a>
           <a href="#">Tracks</a>
-          <a href="#">Librarys</a>
+          <a href="#">Library</a>
           <a href="#">Community</a>
           <a href="#">Sign in</a>  
         </nav>
